# programacion-i-2026

Semana III/: CMakeLists.txt
Semana III/ejemplos/: boole.cpp  char.cpp  double.cpp  float.cpp  holaMundo_1.cpp  holaMundo_2.cpp  holaMundo_3.cpp  int.cpp  string.cpp
Semana IV/: 10_PerdidaDatos.cpp  11_int_double.cpp  12_int_float.cpp  13_ManipuladoresFlujo.cpp  1_Cin.cpp  2_GetLine.cpp  3_Operadores.cpp  4_PrecedenciaOperadores.cpp  5_OperacionesYPrecision.cpp  6_PrecisionFloat.cpp  7_ConversionIntFloat.cpp  8_ConversionIntInt.cpp  9_ForzadoDecimal.cpp  CMakeLists.txt
Semana VI/: main.cpp
Semana VII/: CMakeLists.txt  main.cpp
Semana XIII/: CMakeLists.txt  main.cpp
Semana XIV/: CMakeLists.txt  main.cpp
Semana XV/: CMakeLists.txt  main.cpp
