cmake_minimum_required(VERSION 4.1)
project(Semana_IV)

set(CMAKE_CXX_STANDARD 20)

add_executable(Semana_IV 1_Cin.cpp
        2_GetLine.cpp
        3_Operadores.cpp
        4_PrecedenciaOperadores.cpp
        5_OperacionesYPrecision.cpp
        6_PrecisionFloat.cpp
        7_ConversionIntFloat.cpp
        8_ConversionIntInt.cpp
        9_ForzadoDecimal.cpp
        10_PerdidaDatos.cpp
        11_int_double.cpp
        12_int_float.cpp
        13_ManipuladoresFlujo.cpp)
